[package]
name = "blumenplace-border"
version = "0.0.1"
authors = [ "Alexey Anisimov <zolkko@gmail.com>" ]

[[bin]]
name = "blumenplace-border"
path = "src/main.rs"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"

[dependencies.http]
git = "https://github.com/zolkko/rust-http.git"

